# vega

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  env.example  mypy.ini  pyproject.toml  start.py
.github/workflows/: pr_check.yml
alembic/: env.py
knowledge_base/: chroma.sqlite3
scripts/: setup_knowledge_base.py  test_chat.py
src/: main.py
src/application/dtos/: conversation_dto.py  extracted_data_dto.py  message_dto.py  websocket_message.py
src/application/use_cases/: create_conversation.py  generate_conversation_summary.py  get_conversation.py  process_websocket_message.py
src/domain/entities/: conversation.py  customer_support_ticket.py  extracted_data.py  message.py
src/domain/repositories/: conversation_repository.py  customer_support_ticket_repository.py  extracted_data_repository.py
src/domain/services/: data_extraction_service.py  rag_service.py
src/domain/value_objects/: conversation_id.py  message_id.py  order_number.py  problem_category.py  urgency_level.py
src/infrastructure/cache/: conversation_cache.py  rate_limiter.py  redis_service.py
src/infrastructure/database/: config.py  models.py
src/infrastructure/database/repositories/: conversation_repository_impl.py  extracted_data_repository_impl.py
src/infrastructure/external_services/: __init__.py
src/infrastructure/services/: data_extraction_service_impl.py  rag_service_impl.py
src/infrastructure/websockets/: websocket_handler.py
src/presentation/api/: conversation_routes.py
src/presentation/websockets/: websocket_routes.py
src/shared/config/: settings.py
src/shared/exceptions/: custom_exceptions.py
tests/application/dtos/: test_conversation_dto.py  test_extracted_data_dto.py  test_message_dto.py
tests/application/use_cases/: test_create_conversation.py  test_generate_conversation_summary.py  test_get_conversation.py  test_process_websocket_message.py
tests/domain/entities/: test_conversation.py  test_message.py
tests/domain/value_objects/: test_conversation_id.py  test_message_id.py
tests/infrastructure/repositories/: test_conversation_repository_impl.py  test_extracted_data_repository_impl.py
tests/infrastructure/services/: test_data_extraction_service_impl_simple.py
