[tool.poetry]
name = "vega-conversational-ai"
version = "0.1.0"
description = "Intelligent Conversational Agent with RAG using LangGraph"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.118.0"
uvicorn = {extras = ["standard"], version = "^0.37.0"}
websockets = "^13.1"
pydantic = "^2.11.0"
pydantic-settings = "^2.11.0"
sqlalchemy = "^2.0.43"
alembic = "^1.16.5"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
langchain = "^0.3.27"
langchain-openai = "^0.3.33"
langchain-community = "^0.3.30"
langchain-chroma = "^0.2.6"
chromadb = "^1.1.0"
langgraph = "^0.6.8"
openai = "^1.104.2"
python-multipart = "^0.0.20"
python-dotenv = "^1.1.1"
structlog = "^25.4.0"
rich = "^14.1.0"
httpx = "^0.28.1"
tenacity = "^9.1.2"
redis = "^6.4.0"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
pytest-cov = "^7.0.0"
# Voice processing dependencies
speechrecognition = "^3.14.3"
pyttsx3 = "^2.99"
pyaudio = "^0.2.14"

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.2"
mypy = "^1.18.2"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Exclude additional directories specific to this project
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "alembic/versions",  # Exclude migration files
    "logs",              # Exclude log files
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
    "E4",      # pycodestyle errors
    "E7",      # pycodestyle errors
    "E9",      # pycodestyle errors
    "F",       # pyflakes
    "I",       # isort
    "B",       # flake8-bugbear
    "C4",      # flake8-comprehensions
    "UP",      # pyupgrade
    "ARG001",  # unused-function-args
    "SIM",     # flake8-simplify
    "TCH",     # flake8-type-checking
    "TID",     # flake8-tidy-imports
    "Q",       # flake8-quotes
    "RET",     # flake8-return
    "PTH",     # flake8-use-pathlib
    "ERA",     # eradicate
    "PD",      # pandas-vet
    "PGH",     # pygrep-hooks
    "PL",      # pylint
    "TRY",     # tryceratops
    "FLY",     # flynt
    "NPY",     # numpy
    "AIR",     # airflow
    "PERF",    # perflint
    "FURB",    # refurb
    "RUF",     # Ruff-specific rules
    "S",       # flake8-bandit (security)
    "A",       # flake8-builtins
    "COM",     # flake8-commas
    "DTZ",     # flake8-datetimez
    "EM",      # flake8-errmsg
    "EXE",     # flake8-executable
    "FA",      # flake8-future-annotations
    "ISC",     # flake8-implicit-str-concat
    "ICN",     # flake8-import-conventions
    "G",       # flake8-logging-format
    "INP",     # flake8-no-pep420
    "PIE",     # flake8-pie
    "T20",     # flake8-print
    "PYI",     # flake8-pyi
    "PT",      # flake8-pytest-style
    "RSE",     # flake8-raise
    "SLF",     # flake8-self
    "SLOT",    # flake8-slots
    "INT",     # flake8-gettext
    "ARG",     # flake8-unused-arguments
    "TD",      # flake8-todos
    "FIX",     # flake8-fixme
    "LOG",     # flake8-logging
]

ignore = [
    "E501",    # line too long, handled by formatter
    "B008",    # do not perform function calls in argument defaults
    "C901",    # too complex
    "PLR0913", # too many arguments
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "PLR2004", # magic value used in comparison
    "TRY003",  # avoid specifying long messages outside the exception class
    "EM101",   # raw string in exception
    "EM102",   # f-string in exception
    "S101",    # use of assert detected
    "S104",    # hardcoded bind all interfaces
    "S108",    # hardcoded temp file
    "S110",    # try-except-pass
    "S311",    # standard pseudo-random generators
    "S603",    # subprocess call
    "S607",    # starting a process with a partial executable path
    "PLR0911", # too many return statements
    "PLR0916", # too many boolean expressions
    "COM812",  # missing trailing comma
    "ISC001",  # implicitly concatenated string literals
    "Q000",    # single quotes found but double quotes preferred
    "Q001",    # single quote multiline found but double quotes preferred
    "Q002",    # single quote docstring found but double quotes preferred
    "Q003",    # change outer quotes to avoid escaping inner quotes
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true
split-on-trailing-comma = true

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 5

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

# Allow prints and datetime without timezone in scripts directory
[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["T201", "DTZ005"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
